# M2P2-DEVinventory-Squad2

./: .env_example  .gitignore  README.md  app.py  pyproject.toml
src/app/: __init__.py
src/app/config/: __init__.py
src/app/controllers/: inventories.py  users.py
src/app/database/: __init__.py  dados_inventario.json
src/app/middlewares/: auth.py
src/app/migrations/versions/: 0175eaa61e65_.py
src/app/models/: city.py  country.py  gender.py  inventory.py  permission.py  product_category.py  role.py  state.py  user.py
src/app/routes/: __init__.py
src/app/schemas/: product_schema.py  user_schemas.py
src/app/services/: inventory_services.py  queries_services.py  user_services.py
src/app/utils/: __init__.py  decorators.py  error_messages.py  product_schema.py
tests/: conftest.py  test_app.py
